--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,16 @@
 /build
 
 # misc
+.env
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env
+.vscode
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/.vscode/
